# dali-standalone

./: CMakeLists.txt  NOTES.md  README.md  compilar.sh  setup.sh  test_posix.cc  test_posix2.cc  test_posix3.cc  test_posix4.cc
data/english/: chset.txt  config  dali.msg  dalihlp.msg  lib.msg  wm.msg
data/map/: aixterm.map  ansi.map  ansicol.map  ansir.map  at386.map  at386cnf.map  at386col.map  at386nf.map  dummy.map  kermit-c.map  kermit.map  linux.map  redhat9.map  sun.map  ti924-8.map  ti924.map  ti931.map  vt100.map  vt220.map  vt220sp.map  vwpt.map  w2110a.map  xterm-a.map  xterm-color.map  xterm-idea.map  xterm-lx.map  xterm-uw.map  xterm-web.map  xterm.map
data/spanish/: chset.txt  config  dali.msg  dalihlp.msg  lib.msg  wm.msg
include/: cfix.h  config.h  dali_compat.h  ideafix.h  ifound.h  logprint.h  perms.sch  wapp.h
include/cfix/: db.h  dbbin.h  fm.h  gn.h  ixsqlcur.h  make.h  rp.h  st.h  tm.h  types.h  wif.h
include/cfix/priv/: esdbimp.h  ideaimp.h  ixdbimp.h  macros.h
include/cracker/: prcmd.h  pserconn.h  reqconn.h  reqconn.icc
include/essentia/: bobjcli.h  bobjid.h  bobjmeth.h  cnffile.h  compconn.h  connect.h  criobj.h  dbcfile.h  dbclobj.h  dbclobj.icc  dbconn.h  dbconn.icc  dbconst.h  dbinchk.h  dbmcom.h  dbr.h  dbrep.h  except.h  gservobj.h  gus  iconnect.h  incheck.h  jprefix.h  lconnect.h  msghdr.h  netconn.h  objectid.h  objectid.icc  pobject.h  rconnect.h  sock.h  sock.icc  sockconn.h  sockconn.icc  spriv.h  svdebug.h  tabexpr.h  tcpcfile.h  tcplib.h  usrsig.h
include/guiconn/: guiconn.h  guiconn.icc
include/ideafix/: dbm.h  dbtype.h  form.h  formtype.h  grid.h  ix3cpp.h  ixinchk.h  ref.h  report.h  rpgraph.h  wmdef.h  wmwi.h
include/ideafix/priv/: AddSessionAcEvent.h  ChangeProfileEvent.h  ChangeProgramEvent.h  CloseProgramEvent.h  CloseSessionEvent.h  ErrorReporter.h  GetProfileListEvent.h  GetUserAttrEvent.h  GetUserEvent.h  HasAccessByIdEvent.h  HasAccessByNameEvent.h  HasRoleEvent.h  LoadUserEvent.h  StartProgramEvent.h  StartSessionEvent.h  TransactionOperation.h  URLEncode.h  XMLHandler.h  c_ina.h  c_ixsca.h  cdbmrep.h  cformrep.h  clmon.h  clmon.icc  creprep.h  dbchconf.h  dbchoice.h  dbdefs.h  dbexpr.h  dbexprn.h  dbfield.h  dbimplem.h  dbinchk.h  dbrep.h  debuger.h  delimout.h  enumobj.h  enumobj.icc  esimplem.h  fmactn.h  (+81 more)
include/ifound/: action.h  action2.h  anyvalue.h  anyvalue.icc  array.h  barray.h  bhashtab.h  brbtree.h  bred.h  btypes.h  bufffile.h  chset.h  convconn.h  dirdefs.h  expr.h  expr.icc  ftrace.h  functype.h  gfuncs.h  hashtab.h  iddebug.h  ilist.h  imain.h  inet.h  instruct.h  iopipes.h  isapp.h  istdarg.h  itypes.h  leaktrce.h  libdebug.h  libinfo.h  list.h  list.hh  macros.h  main.h  mainobj.h  mainobj.icc  malloc.h  memcheck.h  (+34 more)
include/ifound/os/: aix5.h  aix5.ib  defaults.h  defaults.ib  hpux10.h  hpux10.ib  hpux11.h  hpux11.ib  hpux11i.h  hpux11i.ib  iris6.h  iris6.ib  linux6.h  linux6.ib  linux7.h  linux7.ib  linuxgcc3.h  linuxgcc3.ib  linuxgcc4.h  linuxgcc4.ib  linuxgcc5.h  linuxgcc8.h  linuxgcc8.ib  os.doc  sunsol.h  sunsol.ib  sunsolx86.h  sunsolx86.ib
include/ifound/priv/: farmem.h  gfuncs.h  itypesp.h  itypesp.icc  macros.h  mangling.h  pconfig.h  timedefs.h  tstmask.h
include/image/: g3states.h  gifimage.h  iximage.h  t4.h  tif_fax3.h  tiff.h  tiffcomp.h  tiffconf.h  tiffio.h  tiffiop.h  tifimage.h
include/ixwi/: wi.h
include/local/: activ.h  collset.h  configf.h  critsect.h  daemon.h  dbrowser.h  dirname.h  dirview.h  ifdfiles.h  istream.h  ofdfiles.h  osfile.h  osfile.icc  password.h  phyfile.h  physlout.h  rcmdenum.h  rcmdserv.h  rcomm2.h  rcommand.h  slog.h  strfile.h  strpipes.h  typeinfo.h  ulicense.h
include/mswi/: ddlist.h  edef.h  edwinbuf.h  estruct.h  ideadll.h  ideawin.h  integ.h  iwbars.h  iwdispat.h  iwflddef.h  iwpopup.h  iwprint.h  iwreport.h  iwres.h  iwsave.h  iwscroll.h  iwsrch.h  iwwi.h  iwwidefs.h  iwwin.h  iwwin32s.h  iwwm.h  wedwin.h  winidea.h
include/priv/: ideafix.h
include/sqldb/: cachechk.h  cachechk.icc
include/sqldb/fwork/: bitfld.h  boolfld.h  charfld.h  condbuil.h  condslot.h  condslot.icc  connect.h  connect.icc  connimpl.h  connimpl.h.ESQLC  conslist.h  conslist.icc  constraint.h  cslotarr.h  cslotarr.icc  curimpl.h  curlist.h  curlist.icc  cursor.h  cursor.icc  datefld.h  dbmsprop.h  decfld.h  dtypesimpl.h  field.h  field.icc  fieldlist.h  fieldlist.icc  fieldname.h  fieldname.icc  fields.h  floatfld.h  fnamelist.h  fnamelist.icc  ifield.h  ifield.icc  ifieldlist.h  ifieldlist.icc  implmgr.h  index.h  (+45 more)
include/sqldb/metadata/: aliasdic.h  bufftab.h  bufftab.icc  createmetadata.sql  curarray.h  curarray.icc  cursormd.h  cursormd.icc  dropmetadata.sql  dropschema.sh  fieldmd.h  fieldmd.icc  fldarray.h  fldarray.icc  ifarray.h  ifarray.icc  ifieldmd.h  ifieldmd.icc  indarray.h  indarray.icc  indexmd.h  indexmd.icc  mdmisc.h  metadata.sc  metadata.sql  metadataifx.sql  metadatainf.sql  metadatapg.sql  metasch.h  openedsch.h  privmd.h  privmd.icc  schemamd.h  schemamd.icc  sqldb.h  tabarray.h  tabarray.icc  tablemd.h  tablemd.icc
include/usrsrv/: sconnect.h  shadobj.h  shdw.h  shdw.icc  usrsrv.dfPackage
include/usrsrv/priv/: bobjserv.h  priv.dfPackage  shade.h  shobj.h  shtube.h
include/winapp/: adblkcmd.h  blkcmd.h  button.h  cell.h  cmdbind.h  cmdhist.h  dbox.h  desktop.h  dirsel.h  dsktcmd.h  editcmd.h  etext.h  etextcur.h  eview.h  filecmd.h  filesel.h  ftext.h  fview.h  helpcmd.h  hlpview.h  infopan.h  label.h  log.h  menu.h  mldbox.h  msgbox.h  panel.h  poscmd.h  slide.h  strhis.h  strlist.h  syscmd.h  text.h  textcur.h  textview.h  view.h  waitmsg.h  wappdbg.h  winapp.dfPackage  winapp.h  (+4 more)
include/wxwin/: wx_field.h  wx_fitem.h  wxwin.dfPackage
packaging/: dali-wrapper.sh
src/dali/: dali.cc
src/dali/command/: bascomm.cc  blkcomm.cc  command.cc  commdef.cc  debbox.cc  debcomm.cc  (+12 more)
src/ixwi/: wicmdtab.c  wicod.cc  widefpar.cc  widialog.c  wiexmenu.cc  wiexpipe.c  wiexsh.c  wiexsys.cc  wiexwcmd.cc  wiglob.c  wigpas.cc  wihelp.cc  wihelpf.c  wiipc.cc  wimessge.cc  wimsg.cc  wioutput.c  wipopup.cc  wiprintf.cc  wirem.cc  wirut.cc  wisrch.cc
(+391 files in other folders)
